--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -74,22 +74,22 @@
                 <h5>Test Interface</h5>
                 <p>Mock Test interface is designed to match the Final exam format.</p>
             </div>
-            <div class="col-md-3 col-10 offset-1">
+            <div class="col-md-3 col-10 offset-1 offset-md-0">
                 <span><i class="fa fa-3x fa-clock-o" aria-hidden="true"></i></span>
                 <h5>Time management</h5>
-                <p>We Provide sufficient number of MHT-CET and JEE Main Mock Test for Practice.</p>
+                <p>We provide Question wise time utilised details.</p>
             </div>
 
             <div class="col-md-3 col-10 offset-md-1 offset-1">
                 <span><i class="fa fa-3x fa-line-chart" aria-hidden="true"></i></span>
                 <h5>Analysis</h5>
-                <p>All test are according to the latest syllabus.</p>
+                <p>Detailed Analysis report after every Test, Know in details status of every question with correct answering.</p>
             </div>
 
             <div class="col-md-3 col-10 offset-md-1 offset-1">
                 <span><i class="fa fa-3x fa-refresh" aria-hidden="true"></i></span>
                 <h5>Review</h5>
-                <p>Mock Test interface is designed to match the Final exam format.</p>
+                <p>Quick Performance Review, History of all soloved Tests with scores and answers marked.</p>
             </div>
         </div>
     </div>
