--- a/static/CSS/homepage.css
+++ b/static/CSS/homepage.css
@@ -137,6 +137,10 @@ hr{
     text-align: center;
 }
 
+.info.container .row{
+    padding-left: 100px;
+}
+
 .info.container .row .col-10 {
     background-color: white;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -412,6 +416,10 @@ section .container .contactForm .formBox .inputBox input[type = "submit"]:hover{
 
     .Banner .container .start-learning-header{
         margin-left: 100px;
+    }
+
+    .info.container .row{
+        padding-left: 0px;
     }
 
     /*Contact Form*/
